<resources>
    <string name="app_name">Movlix</string>
    <string name="about">About</string>
    <string name="amy_adams">Amy Adams</string>
    <string name="skip">skip</string>
    <string name="the_light_between_oceans">THE LIGHT BETWEEN OCEANS</string>
    <string name="release_date_15_nov_2017">Release date : 15 NOV 2017</string>
    <string name="_3_292_people_wathing">3,292 People wathing</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="fueled_by_his_restored_faith_in_humanity_and_inspired_by_superman_s_selfless_act_bruce_wayne_enlists_the_help_of_his_newfound_ally_diana_prince_to_face_an_even_greater_enemy">Fueled by his restored faith in humanity and inspired by Superman\'s selfless act, Bruce Wayne enlists the help of his newfound ally, Diana Prince, to face an even greater enemy...</string>
    <string name="full_cast_and_crew">Full Cast and Crew</string>
    <string name="reviews_390">Reviews (390)</string>
    <string name="_5_0_10">5.0 / 10</string>
    <string name="most_popular_and_authoritative_source_for_movie_tv_and_celebrity_content">Most popular and authoritative source for movie, TV and celebrity content.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_by">Or By</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="back">Back</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="clear_cache">Clear cache</string>
    <string name="share_the_app">Share the app</string>
    <string name="questions">َQuestions</string>
    <string name="adeline_henderson">Adeline Henderson</string>
    <string name="favorite">Favorite</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="_375_votes">(375 votes)</string>
    <string name="type_book_name_or_author">Type book name or author</string>
    <string name="roy_mckenzie">Roy McKenzie</string>
    <string name="the_french_revolution_constituted_for_the_conscience_of_the_dominant_aristocratic_class_a_fall_from_innocence_and_upturning_of_the_natural_chain_of_events_that_resounded_all_over_europe">The French Revolution constituted for the conscience of the dominant aristocratic class a fall from innocence, and upturning of the natural chain of events that resounded all over Europe</string>
    <string name="conversations_with">Conversations with</string>
    <string name="are_you_sure_to_do_whatever">Are you sure to do whatever?</string>
    <string name="title">Title</string>
    <string name="accept">Accept</string>
    <string name="send">Send</string>
</resources>